kcms/tablet: Highlight the calibration matrix as changed, use better UX

Now it acts like a proper setting, being saved/restored like any other
setting in this KCM. Also, it's now highlighted when it's changed.

BUG: 495901