kcms/libkwindevices/inputdevice.cpp
@@ -6,8 +6,6 @@
 
 #include "inputdevice.h"
 
-#include <QDBusError>
-#include <QDBusInterface>
 #include <QList>
 
 #include "logging.h"
@@ -64,6 +62,7 @@ InputDevice::InputDevice(const QString &dbusName, QObject *parent)
     connect(this, &InputDevice::enabledChanged, this, &InputDevice::needsSaveChanged);
     connect(this, &InputDevice::mapToWorkspaceChanged, this, &InputDevice::needsSaveChanged);
     connect(this, &InputDevice::pressureCurveChanged, this, &InputDevice::needsSaveChanged);
+    connect(this, &InputDevice::calibrationMatrixChanged, this, &InputDevice::needsSaveChanged);
 }
 
 void InputDevice::save()
@@ -75,12 +74,13 @@ void InputDevice::save()
     m_enabled.save();
     m_mapToWorkspace.save();
     m_pressureCurve.save();
+    m_calibrationMatrix.save();
 }
 
 bool InputDevice::isSaveNeeded() const
 {
     return m_leftHanded.changed() || m_orientation.changed() || m_outputName.changed() || m_outputArea.changed() || m_enabled.changed()
-        || m_mapToWorkspace.changed() || m_pressureCurve.changed();
+        || m_mapToWorkspace.changed() || m_pressureCurve.changed() || m_calibrationMatrix.changed();
 }
 
 void InputDevice::defaults()
@@ -91,16 +91,14 @@ void InputDevice::defaults()
     m_outputArea.resetFromDefaults();
     m_enabled.resetFromDefaults();
     m_mapToWorkspace.resetFromDefaults();
-    if (supportsCalibrationMatrix()) {
-        setCalibrationMatrix(defaultCalibrationMatrix());
-    }
     m_pressureCurve.resetFromDefaults();
+    m_calibrationMatrix.resetFromDefaults();
 }
 
 bool InputDevice::isDefaults() const
 {
     return m_leftHanded.isDefaults() && m_orientation.isDefaults() && m_outputName.isDefaults() && m_outputArea.isDefaults() && m_enabled.isDefaults()
-        && m_mapToWorkspace.isDefaults() && m_pressureCurve.isDefaults();
+        && m_mapToWorkspace.isDefaults() && m_pressureCurve.isDefaults() && m_calibrationMatrix.isDefaults();
 }
 
 void InputDevice::load()
@@ -112,6 +110,7 @@ void InputDevice::load()
     m_enabled.resetFromSaved();
     m_mapToWorkspace.resetFromSaved();
     m_pressureCurve.resetFromSaved();
+    m_calibrationMatrix.resetFromSaved();
 }
 
 void InputDevice::setOrientation(int ori)
@@ -152,6 +151,34 @@ void InputDevice::setPressureCurve(const QString &curve)
 bool InputDevice::pressureCurveIsDefault() const
 {
     return m_pressureCurve.isDefaults();
+}
+
+QString InputDevice::serializeMatrix(const QMatrix4x4 &matrix)
+{
+    QString result;
+    for (int i = 0; i < 16; i++) {
+        result.append(QString::number(matrix.constData()[i]));
+        if (i != 15) {
+            result.append(QLatin1Char(','));
+        }
+    }
+    return result;
+}
+
+QMatrix4x4 InputDevice::deserializeMatrix(const QString &matrix)
+{
+    const auto items = QStringView(matrix).split(QLatin1Char(','));
+    if (items.size() == 16) {
+        QList<float> data;
+        data.reserve(16);
+        std::ranges::transform(std::as_const(items), std::back_inserter(data), [](const QStringView &item) {
+            return item.toFloat();
+        });
+
+        return QMatrix4x4{data.constData()};
+    }
+
+    return QMatrix4x4{};
 }
 
 #include "moc_inputdevice.cpp"
