kcms/tablet/ui/StylusTab.qml
@@ -229,6 +229,10 @@ Kirigami.FormLayout {
                 root.calibrationWindow = window;
             }
         }
+
+        SettingHighlighter {
+            highlight: !root.device.calibrationMatrixIsDefault
+        }
     }
 
     ActionDialog {
